Continue work on new command processor